kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-notes
  labels:
    app: devops-notes
    environment: production
